# FTXUI

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  animation_8cpp_source.html  animation_8hpp_source.html  bazel.md  button_8cpp_source.html  checkbox_8cpp_source.html  classftxui_1_1ScreenInteractive.html  collapsible_8cpp_source.html  component_8hpp_source.html  component__fuzzer_8cpp_source.html  dropdown_8cpp_source.html  examples_2component_2button_8cpp-example.html  examples_2component_2button_animated_8cpp-example.html  examples_2component_2button_in_frame_8cpp-example.html  examples_2component_2button_style_8cpp-example.html  examples_2component_2canvas_animated_8cpp-example.html  examples_2component_2checkbox_8cpp-example.html  examples_2component_2checkbox_in_frame_8cpp-example.html  examples_2component_2collapsible_8cpp-example.html  examples_2component_2composition_8cpp-example.html  examples_2component_2custom_loop_8cpp-example.html  examples_2component_2dropdown_8cpp-example.html  examples_2component_2flexbox_gallery_8cpp-example.html  examples_2component_2focus_8cpp-example.html  examples_2component_2focus_cursor_8cpp-example.html  examples_2component_2gallery_8cpp-example.html  examples_2component_2homescreen_8cpp-example.html  examples_2component_2input_8cpp-example.html  examples_2component_2input_style_8cpp-example.html  examples_2component_2linear_gradient_gallery_8cpp-example.html  examples_2component_2maybe_8cpp-example.html  examples_2component_2menu2_8cpp-example.html  examples_2component_2menu_8cpp-example.html  examples_2component_2menu_entries_8cpp-example.html  examples_2component_2menu_entries_animated_8cpp-example.html  examples_2component_2menu_in_frame_8cpp-example.html  (+34 more)
.github/workflows/: bazel.yaml
examples/component/: BUILD.bazel  ftxui_example_button.js  ftxui_example_button.wasm  ftxui_example_button_animated.wasm  ftxui_example_button_in_frame.wasm  ftxui_example_button_style.wasm  ftxui_example_checkbox_in_frame.wasm  ftxui_example_collapsible.wasm  ftxui_example_composition.wasm  ftxui_example_dropdown.wasm  ftxui_example_flexbox_gallery.wasm  ftxui_example_gallery.wasm  ftxui_example_homescreen.js  ftxui_example_homescreen.wasm  ftxui_example_maybe.wasm  ftxui_example_modal_dialog.wasm  ftxui_example_modal_dialog_custom.wasm  ftxui_example_nested_screen.wasm  ftxui_example_renderer.wasm  ftxui_example_window.wasm  ftxui_example_with_restored_io.wasm  modal_dialog.cpp  slider_direction.cpp  window.cpp
examples/dom/: BUILD.bazel  color_info_sorted_2d.ipp  ftxui_example_color_gallery.wasm  ftxui_example_color_info_palette256.wasm  graph.cpp
include/: BUILD.bazel
src/: BUILD.bazel
src/ftxui/component/: component_options.cpp  component_test.cpp  container_test.cpp  input_test.cpp  menu_test.cpp  radiobox_test.cpp  receiver_test.cpp  resizable_split_test.cpp  screen_interactive.cpp  screen_interactive_test.cpp  slider_test.cpp  terminal_input_parser_test.cpp  toggle_test.cpp  window.cpp
src/ftxui/dom/: canvas_test.cpp  flexbox_helper_test.cpp  flexbox_test.cpp  gauge_test.cpp  gridbox_test.cpp  hbox_test.cpp  linear_gradient_test.cpp  table_test.cpp  text_test.cpp  vbox_test.cpp
src/ftxui/screen/: string_test.cpp
